[package]
name = "eva-editor"
version = "0.1.0"
edition = "2021"
authors = ["EVA Project"]
description = "An EVA-themed code editor built with Rust and OpenGL"

[dependencies]
gl = "0.14.0"
glfw = "0.45.0"
cgmath = "0.18.0"
image = "0.24.0"
freetype-rs = "0.32.0"
notify = "5.0.0"
syntect = "5.0.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"

[build-dependencies]
gl_generator = "0.14.0"
